--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
   <!-- Replaced Poppins with Inter -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  <link rel="stylesheet" href="./home.css" />
   <style>
     /* ABOUT PAGE ONLY FONT OVERRIDE */
     body.about-page {
@@ -16,125 +17,6 @@
       margin: 0;
       padding: 0;
     }
-
-    /* === NAVIGATION ONLY (Scoped) === */
-    nav {
-      background: white;
-      border-bottom: 1px solid #ddd;
-      position: sticky;
-      top: 0;
-      z-index: 100;
-      font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-        Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-      font-weight: 600;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 0.75rem 2rem;
-    }
-
-    .nav-brand {
-      font-size: 1.25rem;
-      font-weight: 700;
-      color: #4f46e5;
-      flex-shrink: 0;
-    }
-
-    nav ul {
-      list-style: none;
-      display: flex;
-      gap: 2.5rem;
-      margin: 0;
-      padding: 0;
-    }
-
-    nav a {
-      text-decoration: none;
-      color: #4f46e5;
-      font-size: 1rem;
-      transition: color 0.3s ease;
-    }
-
-    nav a:hover,
-    nav a.active {
-      color: #3730a3;
-      text-decoration: underline;
-    }
-
-    .nav-toggle {
-      display: none;
-      flex-direction: column;
-      justify-content: space-between;
-      width: 30px;
-      height: 24px;
-      background: transparent;
-      border: none;
-      cursor: pointer;
-      padding: 0;
-    }
-
-    .nav-toggle span {
-      width: 100%;
-      height: 3px;
-      background: #4f46e5;
-      border-radius: 2px;
-      transition: all 0.3s ease;
-    }
-
-    .nav-toggle.active span:nth-child(1) {
-      transform: rotate(45deg) translate(5px, 5px);
-    }
-
-    .nav-toggle.active span:nth-child(2) {
-      opacity: 0;
-    }
-
-    .nav-toggle.active span:nth-child(3) {
-      transform: rotate(-45deg) translate(6px, -6px);
-    }
-
-    .theme-toggle {
-      background: transparent;
-      border: none;
-      cursor: pointer;
-      font-size: 1.3rem;
-      color: #4f46e5;
-      margin-left: 1rem;
-    }
-
-    @media (max-width: 768px) {
-      .nav-toggle {
-        display: flex;
-      }
-
-      nav ul {
-        position: absolute;
-        top: 60px;
-        left: 0;
-        right: 0;
-        background: #f9fafb;
-        flex-direction: column;
-        overflow: hidden;
-        max-height: 0;
-        transition: max-height 0.3s ease;
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-      }
-
-      nav ul.active {
-        max-height: 300px;
-      }
-
-      nav ul li {
-        border-bottom: 1px solid #ddd;
-      }
-
-      nav ul li a {
-        display: block;
-        padding: 1rem 1.5rem;
-        font-size: 1.1rem;
-      }
-    }
-
     /* === ABOUT PAGE ONLY === */
     .about-page .intro, 
     .about-page .values, 
@@ -234,23 +116,24 @@
 
 <body class="about-page">
 
-<nav>
-  <div class="nav-brand">Tutor Brian</div>
-  <button class="nav-toggle" aria-label="Menu">
-    <span></span>
-    <span></span>
-    <span></span>
-</button>
+<nav class="navbar">
+  <div class="nav-container">
+    <div class="nav-brand">Tutor Brian</div>
+    <button class="menu-toggle" id="menu-toggle" aria-label="Toggle navigation menu">
+      <span class="material-icons">menu</span>
+    </button>
     <ul class="nav-links" id="nav-links">
-      <li><a href="index.html"><span class="material-icons">home</span> Home</a></li>
-      <li><a href="about.html"><span class="material-icons">person</span> About</a></li>
-      <li><a href="services.html"><span class="material-icons">build</span> Services</a></li>
-      <li><a href="contact.html"><span class="material-icons">mail</span> Contact</a></li>
-      <li><a href="faq.html"><span class="material-icons">help</span> FAQ</a></li>
-      <li><a href="blog.html"><span class="material-icons">article</span> Blog</a></li>
-      <li><a href="resources.html"><span class="material-icons">library_books</span> Resources</a></li>
+      <li><a href="./index.html"><span class="material-icons">home</span> Home</a></li>
+      <li><a href="./about.html" class="active"><span class="material-icons">person</span> About</a></li>
+      <li><a href="./services.html"><span class="material-icons">build</span> Services</a></li>
+      <li><a href="./contact.html"><span class="material-icons">mail</span> Contact</a></li>
+      <li><a href="./faq.html"><span class="material-icons">help</span> FAQ</a></li>
+      <li><a href="./blog.html"><span class="material-icons">article</span> Blog</a></li>
+      <li><a href="./resources.html"><span class="material-icons">library_books</span> Resources</a></li>
     </ul>
-    <button class="theme-toggle" onclick="toggleTheme()"><span class="material-icons">brightness_4</span></button>
+    <button class="theme-toggle" onclick="toggleTheme()" aria-label="Toggle light or dark theme">
+      <span class="material-icons">brightness_4</span>
+    </button>
   </div>
 </nav>
 
@@ -312,15 +195,11 @@
 </footer>
 
 <script>
-  document.addEventListener("DOMContentLoaded", () => {
-    const navToggle = document.querySelector('.nav-toggle');
-    const navMenu = document.getElementById('nav-links');
-    navToggle.addEventListener('click', () => {
-      navToggle.classList.toggle('active');
-      navMenu.classList.toggle('active');
-    });
+  const toggle = document.getElementById("menu-toggle");
+  const navLinks = document.getElementById("nav-links");
+  toggle.addEventListener("click", () => {
+    navLinks.classList.toggle("active");
   });
-
   function toggleTheme() {
     const html = document.documentElement;
     html.dataset.theme = html.dataset.theme === 'light' ? 'dark' : 'light';
