--- a/Index.html
+++ b/Index.html
@@ -42,7 +42,7 @@
       <span class="material-icons">menu</span>
     </button>
     <ul class="nav-links" id="nav-links">
-      <li><a href="index.html"><span class="material-icons">home</span> Home</a></li>
+      <li><a href="index.html" class="active"><span class="material-icons">home</span> Home</a></li>
       <li><a href="about.html"><span class="material-icons">person</span> About</a></li>
       <li><a href="services.html"><span class="material-icons">build</span> Services</a></li>
       <li><a href="contact.html"><span class="material-icons">mail</span> Contact</a></li>
