--- a/blog.html
+++ b/blog.html
@@ -7,330 +7,192 @@
   <meta name="description" content="Explore expert writing strategies, research tips, and academic insights from Smart Essay Coach to boost your academic success." />
   <meta name="keywords" content="academic writing tips, thesis structure, citation styles, AI detection, Smart Essay Coach, essay help, research tips" />
   <meta name="author" content="Brian Ogot, Smart Essay Coach" />
-
   <link rel="stylesheet" href="home.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Montserrat:wght@700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet" />
 
   <style>
-    /* Reset for grid and typography */
-    body {
-      background: #f9fafb;
-      font-family: 'Inter', sans-serif;
-      color: #2c3e50;
-      margin: 0;
-      padding: 0;
-    }
+  body {
+    background: #f9fafb;
+    font-family: 'Inter', sans-serif;
+    color: #2c3e50;
+    margin: 0;
+    padding: 0;
+  }
 
-    nav.navbar {
-      background-color: #2c3e50;
-      color: #ecf0f1;
-      box-shadow: 0 3px 8px rgba(0,0,0,0.15);
-      position: sticky;
-      top: 0;
-      z-index: 1200;
-    }
-    .nav-container {
-      max-width: 1200px;
-      margin: auto;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 0.75rem 1rem;
-    }
-    .nav-brand {
-      font-family: 'Montserrat', sans-serif;
-      font-weight: 700;
-      font-size: 1.8rem;
-      letter-spacing: 1.2px;
-      cursor: default;
-      color: #ecf0f1;
-    }
-    .nav-links {
-      display: flex;
-      gap: 1rem;
-      list-style: none;
-      margin: 0;
-      padding: 0;
-    }
-    .nav-links li a {
-      color: #ecf0f1;
-      font-weight: 600;
-      text-decoration: none;
-      display: flex;
-      align-items: center;
-      gap: 0.3rem;
-      padding: 0.5rem 0.7rem;
-      border-radius: 5px;
-      transition: background-color 0.25s ease;
-    }
-    .nav-links li a:hover,
-    .nav-links li a.active {
-      background-color: #4f46e5;
-      box-shadow: 0 2px 12px rgba(79, 70, 229, 0.5);
-    }
-    .nav-links li a .material-icons {
-      font-size: 18px;
-    }
+  header.blog-header {
+    max-width: 900px;
+    margin: 4rem auto 3rem;
+    text-align: center;
+    padding: 0 1rem;
+    color: #2c3e50;
+  }
+  header.blog-header h1 {
+    font-family: 'Inter', sans-serif;
+    font-weight: 700;
+    font-size: 3rem;
+    margin-bottom: 0.5rem;
+    letter-spacing: 1.5px;
+    color: #4f46e5;
+    text-shadow: 0 1px 6px rgba(79, 70, 229, 0.5);
+  }
+  header.blog-header p {
+    font-size: 1.25rem;
+    font-weight: 500;
+    color: #5b5b7d;
+    max-width: 600px;
+    margin: auto;
+    line-height: 1.5;
+  }
 
-    .theme-toggle {
-      background: transparent;
-      border: none;
-      cursor: pointer;
-      color: #ecf0f1;
-      font-size: 22px;
-      margin-left: 0.75rem;
-      transition: color 0.3s ease;
-    }
-    .theme-toggle:hover {
-      color: #8a99ff;
-    }
-    .menu-toggle {
-      display: none; /* Hide on desktop */
-      background: transparent;
-      border: none;
-      color: #ecf0f1;
-      font-size: 28px;
-      cursor: pointer;
-      z-index: 1400; /* Above overlay */
-      transition: opacity 0.3s ease;
-    }
-    .menu-toggle.hidden {
-      opacity: 0;
-      pointer-events: none;
-    }
+  main.blog-grid {
+    max-width: 1100px;
+    margin: 0 auto 4rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    gap: 2.5rem;
+    padding: 0 1rem;
+    padding-top: 1rem;
+  }
 
-    /* Responsive nav for mobile */
-    @media (max-width: 768px) {
-      .nav-links {
-        position: fixed;
-        top: 0;
-        right: 0;
-        width: 100vw;
-        height: 100vh;
-        background: #2c3e50;
-        flex-direction: column;
-        padding-top: 3rem;
-        gap: 1rem;
-        transition: transform 0.3s ease;
-        transform: translateX(100%);
-        z-index: 1300;
-        border-radius: 0;
-        box-shadow: none;
-      }
-      .nav-links.active {
-        transform: translateX(0);
-      }
-      .nav-links li a {
-        font-size: 1.3rem;
-        padding: 1rem 2rem;
-        border-bottom: none;
-      }
-      .menu-toggle {
-        display: block;
-      }
-    }
+  .blog-card {
+    background: white;
+    border-radius: 15px;
+    box-shadow: 0 8px 20px rgba(0,0,0,0.07);
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    cursor: pointer;
+  }
+  .blog-card:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 15px 35px rgba(79, 70, 229, 0.4);
+    z-index: 10;
+  }
 
-    /* Overlay behind menu */
-    .nav-overlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background: rgba(0,0,0,0.4);
-      opacity: 0;
-      pointer-events: none;
-      transition: opacity 0.3s ease;
-      z-index: 1200;
-    }
-    .nav-overlay.active {
-      opacity: 1;
-      pointer-events: auto;
-    }
+  .blog-card img {
+    width: 100%;
+    height: 220px;
+    object-fit: cover;
+    border-bottom: 4px solid #4f46e5;
+    transition: transform 0.4s ease;
+  }
+  .blog-card:hover img {
+    transform: scale(1.05);
+  }
 
-    header.blog-header {
-      max-width: 900px;
-      margin: 4rem auto 3rem;
-      text-align: center;
-      padding: 0 1rem;
-      color: #2c3e50;
-    }
-    header.blog-header h1 {
-      font-family: 'Montserrat', sans-serif;
-      font-weight: 700;
-      font-size: 3rem;
-      margin-bottom: 0.5rem;
-      letter-spacing: 1.5px;
-      color: #4f46e5;
-      text-shadow: 0 1px 6px rgba(79, 70, 229, 0.5);
-    }
-    header.blog-header p {
-      font-size: 1.25rem;
-      font-weight: 500;
-      color: #5b5b7d;
-      max-width: 600px;
-      margin: auto;
-      line-height: 1.5;
-    }
+  .blog-content {
+    padding: 1.5rem 1.75rem 2rem;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+  }
+  .blog-content h2 {
+    font-family: 'Inter', sans-serif;
+    font-weight: 700;
+    font-size: 1.5rem;
+    margin-bottom: 0.75rem;
+    color: #4f46e5;
+  }
+  .blog-content p {
+    font-size: 1.1rem;
+    color: #555;
+    flex-grow: 1;
+    line-height: 1.6;
+    margin-bottom: 1.25rem;
+  }
+  .read-more {
+    align-self: flex-start;
+    padding: 0.5rem 1rem;
+    background-color: #4f46e5;
+    color: white;
+    font-weight: 600;
+    border-radius: 30px;
+    text-decoration: none;
+    box-shadow: 0 4px 10px rgba(79, 70, 229, 0.35);
+    transition: background-color 0.3s ease;
+  }
+  .read-more:hover {
+    background-color: #3c37b8;
+    box-shadow: 0 6px 15px rgba(60, 55, 184, 0.5);
+  }
 
+  footer {
+    background-color: #1e3a8a;
+    color: #ecf0f1;
+    padding: 2rem 1rem;
+    text-align: center;
+    font-size: 0.95rem;
+    letter-spacing: 0.05em;
+    border-top: 1px solid #4f46e5;
+  }
+  footer a {
+    color: #8a99ff;
+    text-decoration: none;
+    font-weight: 600;
+    transition: color 0.3s ease;
+  }
+  footer a:hover {
+    color: #c1caff;
+    text-decoration: underline;
+  }
+
+  .book-mobile {
+    display: none;
+  }
+
+  @media (max-width: 768px) {
     main.blog-grid {
-      max-width: 1100px;
-      margin: 0 auto 4rem;
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-      gap: 2.5rem;
-      padding: 0 1rem;
-      padding-top: 1rem; /* So content isn't hidden under sticky nav */
+      grid-template-columns: 1fr;
     }
-
-    .blog-card {
-      background: white;
-      border-radius: 15px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.07);
-      overflow: hidden;
-      display: flex;
-      flex-direction: column;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-      cursor: pointer;
-    }
-    .blog-card:hover {
-      transform: translateY(-10px);
-      box-shadow: 0 15px 35px rgba(79, 70, 229, 0.4);
-      z-index: 10;
-    }
-
-    .blog-card img {
-      width: 100%;
-      height: 220px;
-      object-fit: cover;
-      border-bottom: 4px solid #4f46e5;
-      transition: transform 0.4s ease;
-    }
-    .blog-card:hover img {
-      transform: scale(1.05);
-    }
-
-    .blog-content {
-      padding: 1.5rem 1.75rem 2rem;
-      flex-grow: 1;
-      display: flex;
-      flex-direction: column;
-    }
-    .blog-content h2 {
-      font-family: 'Montserrat', sans-serif;
-      font-weight: 700;
-      font-size: 1.5rem;
-      margin-bottom: 0.75rem;
-      color: #4f46e5;
-    }
-    .blog-content p {
-      font-size: 1.1rem;
-      color: #555;
-      flex-grow: 1;
-      line-height: 1.6;
-      margin-bottom: 1.25rem;
-    }
-    .read-more {
-      align-self: flex-start;
-      padding: 0.5rem 1rem;
-      background-color: #4f46e5;
+    .book-mobile {
+      display: block;
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background: #4f46e5;
       color: white;
-      font-weight: 600;
+      padding: 12px 20px;
       border-radius: 30px;
+      font-weight: 700;
       text-decoration: none;
-      box-shadow: 0 4px 10px rgba(79, 70, 229, 0.35);
+      box-shadow: 0 6px 15px rgba(79, 70, 229, 0.6);
+      z-index: 1000;
+      font-size: 1rem;
       transition: background-color 0.3s ease;
     }
-    .read-more:hover {
+    .book-mobile:hover {
       background-color: #3c37b8;
-      box-shadow: 0 6px 15px rgba(60, 55, 184, 0.5);
     }
-
-    footer {
-      background-color: #2c3e50;
-      color: #ecf0f1;
-      padding: 2rem 1rem;
-      text-align: center;
-      font-size: 0.95rem;
-      letter-spacing: 0.05em;
-      border-top: 1px solid #4f46e5;
-    }
-    footer a {
-      color: #8a99ff;
-      text-decoration: none;
-      font-weight: 600;
-      transition: color 0.3s ease;
-    }
-    footer a:hover {
-      color: #c1caff;
-      text-decoration: underline;
-    }
-
-    .book-mobile {
-      display: none;
-    }
-
-    @media (max-width: 768px) {
-      main.blog-grid {
-        grid-template-columns: 1fr;
-      }
-      .book-mobile {
-        display: block;
-        position: fixed;
-        bottom: 20px;
-        right: 20px;
-        background: #4f46e5;
-        color: white;
-        padding: 12px 20px;
-        border-radius: 30px;
-        font-weight: 700;
-        text-decoration: none;
-        box-shadow: 0 6px 15px rgba(79, 70, 229, 0.6);
-        z-index: 1000;
-        font-size: 1rem;
-        transition: background-color 0.3s ease;
-      }
-      .book-mobile:hover {
-        background-color: #3c37b8;
-      }
-    }
-  </style>
-
-  <script defer>
-    function toggleTheme() {
-      const html = document.documentElement;
-      html.dataset.theme = html.dataset.theme === 'light' ? 'dark' : 'light';
-    }
-  </script>
+  }
+</style>
 </head>
 <body>
 
 <nav class="navbar">
   <div class="nav-container">
     <div class="nav-brand">Tutor Brian</div>
-    <button class="menu-toggle" id="menu-toggle" aria-label="Open menu" aria-expanded="false">
+    <button class="menu-toggle" id="menu-toggle" aria-label="Toggle navigation menu">
       <span class="material-icons">menu</span>
     </button>
     <ul class="nav-links" id="nav-links">
-      <li><a href="index.html"><span class="material-icons">home</span> Home</a></li>
-      <li><a href="about.html"><span class="material-icons">person</span> About</a></li>
-      <li><a href="services.html"><span class="material-icons">build</span> Services</a></li>
-      <li><a href="contact.html"><span class="material-icons">mail</span> Contact</a></li>
-      <li><a href="faq.html"><span class="material-icons">help</span> FAQ</a></li>
-      <li><a href="blog.html" class="active"><span class="material-icons">article</span> Blog</a></li>
-      <li><a href="resources.html"><span class="material-icons">library_books</span> Resources</a></li>
+      <li><a href="./index.html"><span class="material-icons">home</span> Home</a></li>
+      <li><a href="./about.html"><span class="material-icons">person</span> About</a></li>
+      <li><a href="./services.html"><span class="material-icons">build</span> Services</a></li>
+      <li><a href="./contact.html"><span class="material-icons">mail</span> Contact</a></li>
+      <li><a href="./faq.html"><span class="material-icons">help</span> FAQ</a></li>
+      <li><a href="./blog.html" class="active"><span class="material-icons">article</span> Blog</a></li>
+      <li><a href="./resources.html"><span class="material-icons">library_books</span> Resources</a></li>
     </ul>
-    <button class="theme-toggle" onclick="toggleTheme()" aria-label="Toggle theme">
+    <button class="theme-toggle" onclick="toggleTheme()" aria-label="Toggle light or dark theme">
       <span class="material-icons">brightness_4</span>
     </button>
   </div>
 </nav>
 
 <!-- Overlay for mobile menu -->
-<div class="nav-overlay" id="nav-overlay"></div>
 
 <header class="blog-header" data-aos="fade-up">
   <h1>Smart Academic Insights</h1>
@@ -401,59 +263,30 @@
 
 </main>
 
-<footer>
-  <p>&copy; 2025 Tutor Brian | Academic Coaching</p>
-  <p>
-    Contact: 
-    <a href="mailto:bomfreelancelab@gmail.com">bomfreelancelab@gmail.com</a> | 
-    <a href="https://wa.me/717357947" target="_blank" rel="noopener">WhatsApp</a> | 
-    <a href="https://t.me/smartessaycoach" target="_blank" rel="noopener">Telegram</a>
+<footer style="background:#1e3a8a; padding:2rem 1rem; margin-top:5rem;">
+  <p style="text-align:center; font-size:0.95rem; color:#ffffff; margin:0;">&copy; 2025 Tutor Brian | Academic Coaching</p>
+  <p style="text-align:center; font-size:0.95rem; color:#ffffff; margin:0.5rem 0 0;">
+    Contact: <a href="mailto:bomfreelancelab@gmail.com" style="color:#8a99ff; text-decoration:none;">bomfreelancelab@gmail.com</a> | 
+    <a href="https://wa.me/717357947" target="_blank" style="color:#8a99ff; text-decoration:none;">WhatsApp</a> | 
+    <a href="https://t.me/smartessaycoach" target="_blank" style="color:#8a99ff; text-decoration:none;">Telegram</a>
   </p>
 </footer>
-
 <a href="https://calendly.com/tutorjohntaylor/30min" class="book-mobile" aria-label="Book a 30 minute session">Book Now</a>
 
 <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js" defer></script>
 <script>
   document.addEventListener("DOMContentLoaded", () => {
     AOS.init({ duration: 1000, once: true });
-  });
-
-  const toggle = document.getElementById("menu-toggle");
-  const navLinks = document.getElementById("nav-links");
-  const overlay = document.getElementById("nav-overlay");
-
-  function openMenu() {
-    navLinks.classList.add("active");
-    overlay.classList.add("active");
-    toggle.setAttribute("aria-expanded", "true");
-  }
-
-  function closeMenu() {
-    navLinks.classList.remove("active");
-    overlay.classList.remove("active");
-    toggle.setAttribute("aria-expanded", "false");
-  }
-
-  toggle.addEventListener("click", () => {
-    if (navLinks.classList.contains("active")) {
-      closeMenu();
-    } else {
-      openMenu();
-    }
-  });
-
-  overlay.addEventListener("click", () => {
-    closeMenu();
-  });
-
-  // Close menu on nav link click (mobile)
-  navLinks.querySelectorAll("a").forEach(link => {
-    link.addEventListener("click", () => {
-      closeMenu();
+    const toggle = document.getElementById("menu-toggle");
+    const navLinks = document.getElementById("nav-links");
+    toggle.addEventListener("click", () => {
+      navLinks.classList.toggle("active");
     });
   });
+  function toggleTheme() {
+    const html = document.documentElement;
+    html.dataset.theme = html.dataset.theme === 'light' ? 'dark' : 'light';
+  }
 </script>
-
 </body>
 </html>
