--- a/FAQ.HTML
+++ b/FAQ.HTML
@@ -3,357 +3,173 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>FAQs – Tutor Brian</title>
+  <title>FAQ | Tutor Brian</title>
+  <meta name="description" content="Find answers to common questions about Tutor Brian's academic coaching services." />
+  <meta name="keywords" content="academic coaching, FAQ, thesis help, citation guidance, AI detection, Tutor Brian" />
+  <meta name="author" content="Brian Ogot, Tutor Brian" />
+  <link rel="stylesheet" href="home.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet" />
+ <style>
+  body {
+    margin: 0;
+    font-family: 'Inter', sans-serif;
+    background: linear-gradient(135deg, #e0e7ff, #f9fafb);
+    color: #2c2c2c;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+  }
 
-  <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Poppins:wght@700&display=swap" rel="stylesheet" />
+  main {
+    max-width: 900px;
+    margin: 3rem auto 4rem;
+    padding: 0 1.5rem;
+    flex-grow: 1;
+  }
 
-  <style>
-    /* Reset & base */
-    body {
-      margin: 0;
-      font-family: 'Inter', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-        Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-      background: linear-gradient(135deg, #e0e7ff, #f9fafb);
-      color: #2c2c2c;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-    }
+  h2 {
+    font-family: 'Inter', sans-serif;
+    font-weight: 700;
+    font-size: 2.4rem;
+    color: #4338ca;
+    margin-bottom: 0.5rem;
+    text-align: center;
+    letter-spacing: 0.04em;
+    text-shadow: 0 2px 6px rgba(99, 102, 241, 0.35);
+  }
+  .faq-intro {
+    font-size: 1.1rem;
+    max-width: 600px;
+    margin: 0.25rem auto 3rem auto;
+    color: #555;
+    text-align: center;
+    line-height: 1.5;
+  }
 
-    /* Nav bar styling */
-    nav {
-      background: #ffffffdd;
-      backdrop-filter: saturate(180%) blur(15px);
-      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
-      padding: 1rem 3rem;
-      display: flex;
-      justify-content: center;
-      font-weight: 600;
-      position: sticky;
-      top: 0;
-      z-index: 100;
-      user-select: none;
-    }
+  .faq-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1.4rem;
+  }
 
-    /* Nav container flex wrapper for mobile toggle */
-    nav .nav-container {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      width: 100%;
-      max-width: 900px;
-    }
+  .faq-item {
+    background: white;
+    border-radius: 12px;
+    box-shadow:
+      0 8px 20px rgba(79, 70, 229, 0.1),
+      0 0 0 1px rgba(79, 70, 229, 0.1);
+    overflow: hidden;
+    transition: box-shadow 0.3s ease;
+    user-select: none;
+  }
+  .faq-item.active {
+    box-shadow:
+      0 12px 40px rgba(79, 70, 229, 0.25),
+      0 0 0 1px rgba(79, 70, 229, 0.2);
+    border-radius: 12px 12px 0 0;
+  }
 
-    /* Nav links container */
-    nav ul {
-      list-style: none;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      gap: 3rem;
-    }
+  .faq-question {
+    width: 100%;
+    background: linear-gradient(90deg, #6366f1, #4f46e5);
+    color: white;
+    font-weight: 600;
+    font-size: 1.15rem;
+    padding: 1.15rem 2rem;
+    border: none;
+    text-align: left;
+    cursor: pointer;
+    outline-offset: 4px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    transition: background 0.3s ease;
+    border-radius: 12px;
+  }
+  .faq-item.active .faq-question {
+    background: linear-gradient(90deg, #4f46e5, #4338ca);
+    border-radius: 12px 12px 0 0;
+  }
+  .faq-question:hover,
+  .faq-question:focus-visible {
+    background: linear-gradient(90deg, #4338ca, #3730a3);
+  }
 
-    nav a {
-      color: #4f46e5;
-      font-size: 1.1rem;
-      text-decoration: none;
-      position: relative;
-      padding: 0.25rem 0;
-      transition: color 0.3s ease;
-    }
-    nav a.active,
-    nav a:hover {
-      color: #312e81;
-    }
-    nav a.active::after,
-    nav a:hover::after {
-      content: '';
-      position: absolute;
-      bottom: -5px;
-      left: 0;
-      right: 0;
-      height: 3px;
-      background: #4f46e5;
-      border-radius: 3px 3px 0 0;
-    }
+  .faq-question::after {
+    content: '▸';
+    font-size: 1.3rem;
+    transition: transform 0.3s ease;
+    color: #dbeafe;
+    margin-left: 1rem;
+    flex-shrink: 0;
+    transform-origin: center;
+  }
+  .faq-item.active .faq-question::after {
+    transform: rotate(90deg);
+    color: #a5b4fc;
+  }
 
-    /* Hamburger toggle button */
-    .nav-toggle {
-      display: none;
-      flex-direction: column;
-      justify-content: space-around;
-      width: 30px;
-      height: 25px;
-      background: transparent;
-      border: none;
-      cursor: pointer;
-      padding: 0;
-      z-index: 101;
-    }
+  .faq-answer {
+    max-height: 0;
+    opacity: 0;
+    padding: 0 2rem;
+    background: #f3f4ff;
+    color: #1e293b;
+    font-size: 1rem;
+    line-height: 1.6;
+    transition: max-height 0.4s ease, opacity 0.4s ease, padding 0.4s ease;
+    border-radius: 0 0 12px 12px;
+    overflow: hidden;
+    user-select: text;
+  }
+  .faq-item.active .faq-answer {
+    max-height: 400px;
+    opacity: 1;
+    padding: 1rem 2rem 1.5rem;
+  }
 
-    /* Hamburger lines */
-    .nav-toggle span {
-      width: 30px;
-      height: 3px;
-      background: #4f46e5;
-      border-radius: 2px;
-      transition: all 0.3s ease;
-      transform-origin: 1px;
-    }
-
-    /* Animate hamburger when active */
-    .nav-toggle.active span:nth-child(1) {
-      transform: rotate(45deg);
-    }
-    .nav-toggle.active span:nth-child(2) {
-      opacity: 0;
-    }
-    .nav-toggle.active span:nth-child(3) {
-      transform: rotate(-45deg);
-    }
-
-    /* Responsive nav for mobile */
-    @media (max-width: 768px) {
-      nav {
-        padding: 1rem 1.5rem;
-      }
-
-      nav .nav-container {
-        max-width: 100%;
-      }
-
-      nav ul {
-        position: fixed;
-        top: 58px; /* height of nav */
-        left: 0;
-        right: 0;
-        background: #f9fafb;
-        flex-direction: column;
-        gap: 0;
-        max-height: 0;
-        overflow: hidden;
-        transition: max-height 0.4s ease;
-        box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15);
-        border-radius: 0 0 12px 12px;
-        z-index: 99;
-      }
-
-      nav ul.open {
-        max-height: 400px; /* enough for all menu items */
-      }
-
-      nav ul li {
-        border-bottom: 1px solid #e0e0e0;
-      }
-      nav ul li:last-child {
-        border-bottom: none;
-      }
-      nav ul li a {
-        display: block;
-        padding: 1rem 1.5rem;
-        font-size: 1.2rem;
-        color: #4f46e5;
-      }
-      nav ul li a:hover,
-      nav ul li a.active {
-        background: #4338ca;
-        color: white;
-        border-radius: 0;
-      }
-
-      /* Show hamburger */
-      .nav-toggle {
-        display: flex;
-      }
-    }
-
+  @media (max-width: 600px) {
     main {
-      max-width: 900px;
-      margin: 3rem auto 4rem;
-      padding: 0 1.5rem;
-      flex-grow: 1;
+      margin: 2rem 1rem 3rem;
+      padding: 0 1rem;
     }
-
-    /* Heading */
-    h2 {
-      font-family: 'Poppins', sans-serif;
-      font-weight: 700;
-      font-size: 2.4rem;
-      color: #4338ca;
-      margin-bottom: 0.5rem;
-      text-align: center;
-      letter-spacing: 0.04em;
-      text-shadow: 0 2px 6px rgba(99, 102, 241, 0.35);
-    }
-    .faq-intro {
-      font-size: 1.1rem;
-      max-width: 600px;
-      margin: 0.25rem auto 3rem auto;
-      color: #555;
-      text-align: center;
-      line-height: 1.5;
-    }
-
-    /* FAQ container */
-    .faq-container {
-      display: flex;
-      flex-direction: column;
-      gap: 1.4rem;
-    }
-
-    /* FAQ item */
-    .faq-item {
-      background: white;
-      border-radius: 12px;
-      box-shadow:
-        0 8px 20px rgba(79, 70, 229, 0.1),
-        0 0 0 1px rgba(79, 70, 229, 0.1);
-      overflow: hidden;
-      transition: box-shadow 0.3s ease;
-      user-select: none;
-    }
-    .faq-item.active {
-      box-shadow:
-        0 12px 40px rgba(79, 70, 229, 0.25),
-        0 0 0 1px rgba(79, 70, 229, 0.2);
-      border-radius: 12px 12px 0 0;
-    }
-
-    /* FAQ question button */
     .faq-question {
-      width: 100%;
-      background: linear-gradient(90deg, #6366f1, #4f46e5);
-      color: white;
-      font-weight: 600;
-      font-size: 1.15rem;
-      padding: 1.15rem 2rem;
-      border: none;
-      text-align: left;
-      cursor: pointer;
-      outline-offset: 4px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      transition: background 0.3s ease;
-      border-radius: 12px;
-    }
-    .faq-item.active .faq-question {
-      background: linear-gradient(90deg, #4f46e5, #4338ca);
-      border-radius: 12px 12px 0 0;
-    }
-    .faq-question:hover,
-    .faq-question:focus-visible {
-      background: linear-gradient(90deg, #4338ca, #3730a3);
-    }
-
-    /* Chevron icon */
-    .faq-question::after {
-      content: '▸';
-      font-size: 1.3rem;
-      transition: transform 0.3s ease;
-      color: #dbeafe;
-      margin-left: 1rem;
-      flex-shrink: 0;
-      transform-origin: center;
-    }
-    .faq-item.active .faq-question::after {
-      transform: rotate(90deg);
-      color: #a5b4fc;
-    }
-
-    /* FAQ answer panel */
-    .faq-answer {
-      max-height: 0;
-      opacity: 0;
-      padding: 0 2rem;
-      background: #f3f4ff;
-      color: #1e293b;
       font-size: 1rem;
-      line-height: 1.6;
-      transition: max-height 0.4s ease, opacity 0.4s ease, padding 0.4s ease;
-      border-radius: 0 0 12px 12px;
-      overflow: hidden;
-      user-select: text;
+      padding: 1rem 1.5rem;
+    }
+    .faq-answer {
+      padding: 0 1.5rem;
     }
     .faq-item.active .faq-answer {
-      max-height: 400px; /* enough for content */
-      opacity: 1;
-      padding: 1rem 2rem 1.5rem;
+      padding: 1rem 1.5rem 1.5rem;
     }
-
-    /* Responsive tweaks */
-    @media (max-width: 600px) {
-      main {
-        margin: 2rem 1rem 3rem;
-        padding: 0 1rem;
-      }
-      .faq-question {
-        font-size: 1rem;
-        padding: 1rem 1.5rem;
-      }
-      .faq-answer {
-        padding: 0 1.5rem;
-      }
-      .faq-item.active .faq-answer {
-        padding: 1rem 1.5rem 1.5rem;
-      }
-    }
-  </style>
-
-  <script>
-    document.addEventListener("DOMContentLoaded", () => {
-      const faqs = document.querySelectorAll(".faq-item");
-      faqs.forEach(faq => {
-        faq.querySelector(".faq-question").addEventListener("click", () => {
-          // Close others
-          faqs.forEach(other => {
-            if (other !== faq) other.classList.remove("active");
-          });
-          // Toggle current
-          faq.classList.toggle("active");
-        });
-      });
-
-      // Mobile nav toggle
-      const navToggle = document.querySelector('.nav-toggle');
-      const navMenu = document.querySelector('nav ul');
-
-      navToggle.addEventListener('click', () => {
-        navToggle.classList.toggle('active');
-        navMenu.classList.toggle('open');
-      });
-    });
-
-    function toggleTheme() {
-      const html = document.documentElement;
-      html.dataset.theme = html.dataset.theme === 'light' ? 'dark' : 'light';
-    }
-  </script>
+  }
+</style>
 </head>
 <body>
 
-  <nav>
-    <div class="nav-container">
-      <!-- Hamburger -->
-      <button class="nav-toggle" aria-label="Toggle navigation menu" aria-expanded="false" aria-controls="primary-navigation">
-        <span></span>
-        <span></span>
-        <span></span>
-      </button>
-
-      <!-- Navigation links -->
-      <ul id="primary-navigation" role="menu">
-        <li role="none"><a href="index.html" role="menuitem">Home</a></li>
-        <li role="none"><a href="about.html" role="menuitem">About</a></li>
-        <li role="none"><a href="services.html" role="menuitem">Services</a></li>
-        <li role="none"><a href="contact.html" role="menuitem">Contact</a></li>
-        <li role="none"><a href="faq.html" class="active" role="menuitem">FAQ</a></li>
-        <li><a href="blog.html"><span class="material-icons">article</span> Blog</a></li>
-        <li><a href="resources.html"><span class="material-icons">library_books</span> Resources</a></li>
-      </ul>
-    </div>
-  </nav>
+  <nav class="navbar">
+  <div class="nav-container">
+    <div class="nav-brand">Tutor Brian</div>
+    <button class="menu-toggle" id="menu-toggle" aria-label="Toggle navigation menu">
+      <span class="material-icons">menu</span>
+    </button>
+    <ul class="nav-links" id="nav-links">
+      <li><a href="./index.html"><span class="material-icons">home</span> Home</a></li>
+      <li><a href="./about.html"><span class="material-icons">person</span> About</a></li>
+      <li><a href="./services.html"><span class="material-icons">build</span> Services</a></li>
+      <li><a href="./contact.html"><span class="material-icons">mail</span> Contact</a></li>
+      <li><a href="./faq.html" class="active"><span class="material-icons">help</span> FAQ</a></li>
+      <li><a href="./blog.html"><span class="material-icons">article</span> Blog</a></li>
+      <li><a href="./resources.html"><span class="material-icons">library_books</span> Resources</a></li>
+    </ul>
+    <button class="theme-toggle" onclick="toggleTheme()" aria-label="Toggle light or dark theme">
+      <span class="material-icons">brightness_4</span>
+    </button>
+  </div>
+</nav>
 
   <main>
     <section class="faq-section" aria-label="Frequently Asked Questions">
@@ -434,9 +250,39 @@
     </section>
   </main>
 
-  <footer style="text-align:center; padding: 2rem 1rem; color:#777; font-size:0.9rem;">
-    &copy; 2025 Tutor Brian | Academic Coaching
-  </footer>
+ <footer style="background:#1e3a8a; padding:2rem 1rem; margin-top:5rem;">
+  <p style="text-align:center; font-size:0.95rem; color:#ffffff; margin:0;">&copy; 2025 Tutor Brian | Academic Coaching</p>
+  <p style="text-align:center; font-size:0.95rem; color:#ffffff; margin:0.5rem 0 0;">
+    Contact: <a href="mailto:bomfreelancelab@gmail.com" style="color:#8a99ff; text-decoration:none;">bomfreelancelab@gmail.com</a> | 
+    <a href="https://wa.me/717357947" target="_blank" style="color:#8a99ff; text-decoration:none;">WhatsApp</a> | 
+    <a href="https://t.me/smartessaycoach" target="_blank" style="color:#8a99ff; text-decoration:none;">Telegram</a>
+  </p>
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js" defer></script>
+<script>
+  document.addEventListener("DOMContentLoaded", () => {
+    AOS.init({ duration: 1000, once: true });
+    const faqs = document.querySelectorAll(".faq-item");
+    faqs.forEach(faq => {
+      faq.querySelector(".faq-question").addEventListener("click", () => {
+        faqs.forEach(other => {
+          if (other !== faq) other.classList.remove("active");
+        });
+        faq.classList.toggle("active");
+      });
+    });
+    const toggle = document.getElementById("menu-toggle");
+    const navLinks = document.getElementById("nav-links");
+    toggle.addEventListener("click", () => {
+      navLinks.classList.toggle("active");
+    });
+  });
+  function toggleTheme() {
+    const html = document.documentElement;
+    html.dataset.theme = html.dataset.theme === 'light' ? 'dark' : 'light';
+  }
+</script>
 
 </body>
 </html>
