--- a/about.html
+++ b/about.html
@@ -199,12 +199,15 @@
       background: #cc5200;
     }
 
-    @media (max-width: 600px) {
-      .about-page h1, .about-page h2 {
-        font-size: 1.5rem;
+    /* Normalize navigation on mobile to match index.html and services.html */
+    @media (max-width: 768px) {
+      .about-page .nav-links.active li a {
+        font-size: 1rem; /* Standardize text size */
+        padding: 0.5rem 1rem; /* Consistent padding */
       }
-      .about-page .intro .cta {
-        padding: 0.5rem 1.5rem;
+      .about-page .nav-links.active .material-icons {
+        font-size: 1.5rem; /* Smaller icons to match other pages */
+        margin-right: 0.5rem;
       }
     }
   </style>
