update across all these files

--- a/testimonials.html
+++ b/testimonials.html
@@ -171,6 +171,7 @@
       <li><a href="./faq.html"><span class="material-icons">help</span> FAQ</a></li>
       <li><a href="./blog.html"><span class="material-icons">article</span> Blog</a></li>
       <li><a href="./resources.html"><span class="material-icons">library_books</span> Resources</a></li>
+      <li><a href="testimonials.html"><span class="material-icons">rate_review</span> Testimonials</a></li>
     </ul>
     <button class="theme-toggle" onclick="toggleTheme()" aria-label="Toggle light or dark theme">
       <span class="material-icons">brightness_4</span>
@@ -233,7 +234,7 @@
         <p>"Liberty’s PBA program is intense, and my dissertation proposal was a mess. Brian helped me refine my research question on ethical leadership and structure my literature review. His advice on synthesizing sources and avoiding plagiarism was a lifesaver. My advisor finally approved my draft!"</p>
         <cite>— Thomas R., PBA Doctoral Student, Liberty University</cite>
       </div>
-      <div class="testimonial-card">
+      <div class="testimonial-card">0+
         <span class="material-icons">gavel</span>
         <p>"Writing my PBA dissertation at Liberty was tough, especially the methodology section. Brian coached me on mixed-methods research and helped me align my framework with business ethics. His detailed feedback made my chapter clear and professional. I’m on track to finish strong!"</p>
         <cite>— Olivia W., PBA Doctoral Student, Liberty University</cite>
