--- a/services.html
+++ b/services.html
@@ -189,6 +189,7 @@
       <li><a href="./faq.html"><span class="material-icons">help</span> FAQ</a></li>
       <li><a href="./blog.html"><span class="material-icons">article</span> Blog</a></li>
       <li><a href="./resources.html"><span class="material-icons">library_books</span> Resources</a></li>
+      <li><a href="testimonials.html"><span class="material-icons">rate_review</span> Testimonials</a></li>
     </ul>
     <button class="theme-toggle" onclick="toggleTheme()" aria-label="Toggle light or dark theme">
       <span class="material-icons">brightness_4</span>
