--- a/cases.html
+++ b/cases.html
@@ -185,6 +185,7 @@
       <li><a href="./blog.html"><span class="material-icons">article</span> Blog</a></li>
       <li><a href="./resources.html"><span class="material-icons">library_books</span> Resources</a></li>
       <li><a href="./testimonials.html"><span class="material-icons">star</span> Testimonials</a></li>
+      <li><a href="./cases.html" class="active" aria-current="page"><span class="material-icons">school</span> Case Studies</a></li>
     </ul>
     <button class="theme-toggle" onclick="toggleTheme()" aria-label="Toggle light or dark theme">
       <span class="material-icons">brightness_4</span>
